# SecopII_hackatondatos

./: .gitignore  Dockerfile.app  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  test_db.py  test_indent.py  update_main3.py
app/: check_sancionados.py  databaseUpgrade.py  fix_index.py  main.py  main2.py  main3.py  test_db.py  test_fastapi.py  test_fastapi2.py  test_global_chart.py  test_groupby.py  test_ilike.py  test_pg_query.py  test_prov_group.py  test_query.py  test_query_modalidad.py
app/models/: db.py
app/muestra/: cargacsv.py
app/private/: experiment_example.json
app/static/css/: main.css
app/static/js/: main.js
app/templates/: adicion_detalle.html  contrato_detalle.html  dashboard.html  entidad_detalle.html  entidad_filas.html  estadisticas.html  footer.html  global_chart.html  graph_ente_prove.html  header.html  index.html  index_tot.html  proveedor_detalle.html  proveedor_filas.html  section_cards.html  section_cards_prov.html  section_cards_sancionados.html
docs/: 15_Diccionario_de_Datos-_SECOP_II_-_Contratos_Electr_nicos (1).docx  23_Diccionario_de_Datos-_SECOP_II_-_Garantias.docx  24_Diccionario_de_Datos-_SECOP_II_-_Facturas.docx  29_Diccionario_de_Datos-SECOP_II_-_Adiciones.docx  32_Diccionario_de_Datos-SECOP_II_-_Ejecuci_n_Contratos.docx
